--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -25,7 +25,7 @@
 <body>
     <div class="nav">
         <a href="">Home</a>
-        <a href="">about</a>
+        <a href="about.html">about</a>
         <a href="">Contact</a>
         <a href="">Page</a>
         </div>
